Heading spacing fix.

--- a/styles.css
+++ b/styles.css
@@ -63,12 +63,13 @@ header {
     border-bottom: 2px solid #247192;
     font-size: 1rem;
     height: 4rem;
+    min-height: 3.35vw;
 }
 
 h1 {
     font-family: "Prototype", sans-serif;
     font-weight: 100;
-    font-size: 2.5rem;
+    font-size: 2vw;
 }
 
 #ME, #FW {
@@ -93,6 +94,7 @@ h1 {
 
 #FW {
     border-radius: 50%;
+    max-height: inherit;
     height: 3.3vw;
     width: 3.3vw;
     margin-left: -1vw;
